--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<!-- <header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -61,7 +61,7 @@
 				</div>
 			</div>
 		</div>
-	</header>
+	</header> -->
 
 	<div id="fh5co-about" class="animate-box">
 		<div class="container">
@@ -71,17 +71,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-5">
 					<ul class="info">
+						<li><div style="width:100%; text-align: center;"><img src="images/user-3.jpg" class="photo2"/></div></li>
 						<li><span class="first-block">Full Name:</span><span class="second-block">Simon Shahbaz</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+1(316)240-3351</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">yansunllc@outlook.com</span></li>
 						<li><span class="first-block">Company:</span><span class="second-block">CUTLERY SET SHOP LLC</span></li>
+						<li><span class="first-block">Company Email:</span><span class="second-block">cutleryshop9832@outlook.com</span></li>
 						<!-- <li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li> -->
 						<li><span class="first-block">Address:</span><span class="second-block">1942 Broadway St STE 314C, Boulder, CO, 80302</span></li>
 					</ul>
 				</div>
-				<div class="col-md-8">
+				<div class="col-md-7">
 					<h2>Hello There!</h2>
 					<p>Over 10 years of experience as a software engineer working on a range of web applications allowed me to develop the operational, technical, and creative skills that will be essential.</p>
 					<p>In collaboration with the development team, we created 35+ websites and optimized the quality and efficiency of the build process.</p>
