--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="row">
 				<div class="col-md-5">
 					<ul class="info">
-						<li><div style="width:100%; text-align: center;"><img src="images/user-3.jpg" class="photo2"/></div></li>
+						<li><div style="width:100%; text-align: center;"><img src="images/user-3.jpg" class="photo2" style="border-radius: 100%;"/></div></li>
 						<li><span class="first-block">Full Name:</span><span class="second-block">Simon Shahbaz</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+1(316)240-3351</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">yansunllc@outlook.com</span></li>
